# mpc_eddsa

./: .gitignore  Cargo.toml  Makefile  README.md
built/: sample.sign23.json  sample.sign33.json
frost_algo/: Cargo.toml
frost_algo/src/: exceptions.rs  lib.rs
frost_algo/src/algo/: hd.rs  keygen.rs  mod.rs  party_i.rs  pubkey.rs  sign.rs
frost_algo/src/algo/data_structure/: keystore.rs  mod.rs  signature.rs
frost_test/: Cargo.toml
frost_test/src/: main.rs
mpc_algo/: Cargo.toml
mpc_algo/src/: aes.rs  lib.rs  party_i.rs
mpc_algo/src/biz_algo/: aes.rs  hd.rs  keygen.rs  mod.rs  sign.rs
mpc_algo/src/frost/: mod.rs  party_key.rs  signing_key.rs
mpc_demo/: Cargo.toml
mpc_demo/src/: demo_keygen.rs  demo_sign.rs
mpc_sesman/: Cargo.toml
mpc_sesman/src/: sesman_client.rs  sesman_server.rs
patches/ed25519-dalek-1.0.1/: Cargo.toml
patches/ed25519-dalek-1.0.1/src/: lib.rs  public.rs
showcase/: Cargo.toml  deploy_showcase.mk
showcase/src/: demo_keygen.rs  demo_sesman_server.rs  demo_sign.rs  keygen.rs  sign.rs
showcase/src/sesman/: Makefile  client.rs  mod.rs  server.rs  sesman.proto
showcase/src/sesman/protoc_rust/: Cargo.toml  main.rs
showcase/src/sesman/protogen/: mod.rs  sesman.rs
src/: main.rs
src/common/: keygen.rs  manager.rs  mod.rs  party_i.rs  sign.rs
