[package]
name = "mpc_algo"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.9", features = ["std"] }
bs58 = "0.5"
curve25519-dalek = { version = "3", features = ["serde"] }
ed25519-dalek = "1" # ver.2 (latest at 2024.01.18) has no struct PublicKey
hex = "0.4"
hmac = { version = "0.11.0", features = ["std"] }
itertools = "0.12"
rand = "0.7"
rand_core = "0.6"
reqwest = { version = "0.10.1", default-features = false, features = ["native-tls", "json", "blocking"] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.9"
uuid = { version = "0.8", features = ["v4"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

[dependencies.bip32]
path = "deps/bip32-Ed25519-0.5.1"

[dependencies.mpc_sesman]
path = "../mpc_sesman"

# [dependencies.xuanmi_base_support]
# git = "https://github.com/taiyi-research-institute/xuanmi_base_support"
# rev = "731cb963ba00cbc1adf26645eae8a92f3733c76b"
