[package]
name = "mpc_algo"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.9", features = ["std"] }
bs58 = "0.5"
curve25519-dalek = { version = "3", features = ["serde"] }
ed25519-dalek = "1" # ver.2 (latest at 2024.01.18) has no struct PublicKey
hex = "0.4"
hmac = { version = "0.11.0", features = ["std"] }
itertools = "0.12"

# ========== Defined in <workspace>/Cargo.toml ==========
async-trait = { workspace = true }
bip32 = { workspace = true }
libexception = { workspace = true }
mpc_spec = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
zeroize = { workspace = true }
