[package]
name = "mpc_demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demo_keygen"
path = "src/demo_keygen.rs"

[[bin]]
name = "demo_sign"
path = "src/demo_sign.rs"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
hex = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dependencies.mpc_algo]
path = "../mpc_algo"

[dependencies.mpc_sesman]
path = "../mpc_sesman"