[package]
name = "mpc_sesman"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpc_sesman"
path = "src/sesman_client.rs"

[[bin]]
name = "mpc_sesman"
path = "src/sesman_server.rs"

[dependencies]
axum = "0.7"
blake2 = "0.10"
bs58 = "0.5"
hex = "0.4"
miniz_oxide = "0.7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
