[package]
version = "0.1.0"
edition = "2021"
name = "mpc_eddsa_showcase"

[[bin]]
name = "keygen"
path = "src/keygen.rs"

[[bin]]
name = "sign"
path = "src/sign.rs"

[[bin]]
name = "sesman_server"
path = "src/sesman_server.rs"

[dependencies]

miniz_oxide = "0.7"
prost = "0.12"
prost-types = "0.12"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
tonic = { version = "0.10", features = ["gzip", "channel"] }

bs58 = { workspace = true }
clap = { workspace = true }
libexception = { workspace = true }
mpc_algo = { workspace = true }
mpc_spec = { workspace = true }
serde = { workspace = true }
serde-pickle = { workspace = true }
sha2 ={ workspace = true }
tokio = { workspace = true }
