[package]
version = "0.1.0"
edition = "2021"
name = "mpc_eddsa_showcase"

[[bin]]
name = "demo_keygen"
path = "src/demo_keygen.rs"

[[bin]]
name = "demo_sign"
path = "src/demo_sign.rs"

[[bin]]
name = "demo_sesman_server"
path = "src/demo_sesman_server.rs"

[dependencies]
dashmap = "5"
miniz_oxide = "0.7"
prost = "0.12"
prost-types = "0.12"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
tonic = { version = "0.11" }

bs58 = { workspace = true }
clap = { workspace = true }
libexception = { workspace = true }
mpc_algo = { workspace = true }
mpc_spec = { workspace = true }
serde = { workspace = true }
serde-pickle = { workspace = true }
sha2 ={ workspace = true }
tokio = { workspace = true }
