[package]
edition = "2021"
name = "ed25519-dalek"
version = "1.0.1"
authors = ["isis lovecruft <isis@patternsinthevoid.net>"]
exclude = [".gitignore", "TESTVECTORS", "res/*"]
description = "Fast and efficient ed25519 EdDSA key generations, signing, and verification in pure Rust."
homepage = "https://dalek.rs"
documentation = "https://docs.rs/ed25519-dalek"
readme = "README.md"
keywords = ["cryptography", "ed25519", "curve25519", "signature", "ECC"]
categories = ["cryptography", "no-std"]
license = "BSD-3-Clause"
repository = "https://github.com/dalek-cryptography/ed25519-dalek"

[dependencies.bs58]
version = "0.5"

[dependencies.curve25519-dalek]
version = "3"
default-features = false

[dependencies.ed25519]
version = "1"
default-features = false

[dependencies.merlin]
version = "2"
optional = true
default-features = false

[dependencies.rand]
version = "0.7"
optional = true
default-features = false

[dependencies.rand_core]
version = "0.5"
optional = true
default-features = false

[dependencies.serde_bytes]
version = "0.11"
optional = true

[dependencies.serde_crate]
version = "1.0"
optional = true
default-features = false
package = "serde"

[dependencies.sha2]
version = "0.9"
default-features = false

[dependencies.zeroize]
version = "1"
features = ["zeroize_derive"]
default-features = false

[dev-dependencies.bincode]
version = "1.0"

[dev-dependencies.criterion]
version = "0.3"

[dev-dependencies.hex]
version = "^0.4"

[dev-dependencies.rand]
version = "0.7"

[dev-dependencies.serde_crate]
version = "1.0"
features = ["derive"]
package = "serde"

[dev-dependencies.serde_json]
version = "1.0"

[dev-dependencies.toml]
version = "0.5"

[features]
alloc = ["curve25519-dalek/alloc", "rand/alloc", "zeroize/alloc"]
asm = ["sha2/asm"]
batch = ["merlin", "rand"]
batch_deterministic = ["merlin", "rand", "rand_core"]
default = ["std", "rand", "u64_backend"]
legacy_compatibility = []
nightly = ["curve25519-dalek/nightly"]
serde = ["serde_crate", "serde_bytes", "ed25519/serde"]
simd_backend = ["curve25519-dalek/simd_backend"]
std = [
    "curve25519-dalek/std",
    "ed25519/std",
    "serde_crate/std",
    "sha2/std",
    "rand/std",
]
u32_backend = ["curve25519-dalek/u32_backend"]
u64_backend = ["curve25519-dalek/u64_backend"]
